# occa_py

./: CMakeLists.txt  README.md  set_OCCA_env.sh
add_vec/: CMakeLists.txt  main.cpp  python_module.py
perf/: CMakeLists.txt  main.cpp  python_module.py
perf/kernel/: copyVectors.okl
